--- a/categories.html
+++ b/categories.html
@@ -1,38 +1,67 @@
-<!DOCTYPE html><html lang="en"><head>
-<meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Categories</title><link rel="stylesheet" href="assets/css/style.css"></head>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Nova • Categories</title>
+  <link rel="stylesheet" href="/assets/css/style.css"/>
+  <script defer src="/assets/js/state.js"></script>
+  <script defer src="/assets/js/data.js"></script>
+</head>
 <body>
-<div class="card">
-  <h2>Choose categories that resonate with your life, your experiences, and the work that excites you.</h2>
-  <p>Pick 2–4 to start. You can always adjust later.</p>
-  <div id="categories" class="flex"></div>
-  <br><button onclick="nextPage()">Next • Select Traits</button>
-</div>
+  <div class="container">
+    <div class="header">
+      <div class="brand">Nova</div>
+      <div class="list"><a class="pill" href="/index.html">Welcome</a><a class="pill" href="/categories.html">Categories</a><a class="pill" href="/traits.html">Traits</a><a class="pill" href="/results.html">Results</a></div>
+      <div class="badge">User: <span id="u"></span> • PIN: <span id="p"></span></div>
+    </div>
+    <div class="card">
+      <h1 class="h1">Choose categories that resonate with your life, your experiences, and the work that excites you.</h1>
+      <p class="p">Pick 2–4 to start. You can always adjust later.</p>
+      <div id="notice" class="small" style="display:none"></div>
+      <div class="hr"></div>
+      <div id="cats" class="grid cols-3"></div>
+      <div class="hr"></div>
+      <div class="grid cols-2">
+        <button id="next" class="btn primary">Next • Select Traits</button>
+        <button id="clear" class="btn ghost">Clear</button>
+      </div>
+    </div>
+  </div>
 <script>
-async function loadCategories(){
-  try{
-    const res = await fetch('data/categories.json');
-    const cats = await res.json();
-    if(!Array.isArray(cats) || cats.length===0) throw 'empty';
-    render(cats);
-  }catch(e){
-    const fallback=["Technology","Education & Community","Healthcare","Public Safety","Business & Finance","Arts & Media","Engineering","Science & Environment","Trades & Logistics"];
-    render(fallback);
-  }
-}
-function render(arr){
-  const div=document.getElementById('categories');
-  arr.forEach(c=>{
-    const el=document.createElement('div');
-    el.className='category';
-    el.textContent=(c.name||c);
-    el.onclick=()=>el.classList.toggle('selected');
-    div.appendChild(el);
-  });
-}
-function nextPage(){
-  window.location='traits.html';
-}
-loadCategories();
+  qs('#u').textContent = NOVA.state.user||'guest';
+  qs('#p').textContent = NOVA.state.pin? '••••' : '—';
+  (async ()=>{
+    const data = await loadAllData();
+    const cats = data.categories||[];
+    NOVA.state.categories = cats;
+    let selected = new Set(NOVA.state.selectedCategories||[]);
+    const root = qs('#cats');
+    root.innerHTML = '';
+
+    if(cats.length===0){
+      qs('#notice').style.display='block';
+      qs('#notice').textContent = 'No categories found. Check /data/categories.json exists in your deploy.';
+    }
+
+    cats.forEach(c=>{
+      const el = document.createElement('button');
+      el.className = 'btn ghost';
+      el.textContent = c;
+      if(selected.has(c)) el.style.borderColor = 'var(--accent)';
+      el.addEventListener('click', ()=>{
+        if(selected.has(c)){ selected.delete(c); el.style.borderColor='var(--line)'; }
+        else { selected.add(c); el.style.borderColor='var(--accent)'; }
+      });
+      root.appendChild(el);
+    });
+    qs('#next').onclick = ()=>{
+      NOVA.state.selectedCategories = Array.from(selected);
+      NOVA.save();
+      location.href='/traits.html';
+    };
+    qs('#clear').onclick = ()=>{ selected = new Set(); document.querySelectorAll('#cats .btn').forEach(b=> b.style.borderColor='var(--line)'); };
+  })();
 </script>
-</body></html>
+</body>
+</html>
