--- a/traits.html
+++ b/traits.html
@@ -49,13 +49,13 @@
     const pool = traits.filter(t=> !selectedCats.size || selectedCats.has(t.category));
     if(pool.length===0){
       const note = document.createElement('div');
-      note.className='small'; note.textContent='No traits found. Check /data/traits.json.';
+      note.className='small'; note.textContent='No traits found — select different categories or check your data.';
       tray.appendChild(note);
     }
     pool.forEach(t=>{
       const b = document.createElement('button');
       b.className='btn ghost';
-      b.innerHTML = `<div><div style="font-weight:700">${t.name||'Trait'}</div><div class="small">${t.category||''}</div></div>`;
+      b.innerHTML = `<div><div style="font-weight:800">${t.name||'Trait'}</div><div class="small">${t.category||''}</div></div>`;
       const key = t.id||t.name;
       if(selected.has(key)) b.style.borderColor='var(--accent)';
       b.onclick = ()=>{
