--- a/categories.html
+++ b/categories.html
@@ -1,63 +1,43 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Nova • Categories</title>
-  <link rel="stylesheet" href="/assets/css/style.css"/>
-  <script defer src="/assets/js/state.js"></script>
-  <script defer src="/assets/js/data.js"></script>
-</head>
-<body>
-  <div class="container">
-    <div class="header">
-      <div class="brand">Nova</div>
-      <div class="list"><a class="pill" href="/index.html">Welcome</a><a class="pill" href="/categories.html">Categories</a><a class="pill" href="/traits.html">Traits</a><a class="pill" href="/results.html">Results</a></div>
-      <div class="badge">User: <span id="u"></span> • PIN: <span id="p"></span></div>
-    </div>
-    <div class="card">
-      <h1 class="h1">Choose categories that resonate with your life, your experiences, and the work that excites you.</h1>
-      <p class="p">Pick 2–4 to start. You can always adjust later.</p>
-      <div class="hr"></div>
-      <div id="cats" class="grid cols-4"></div>
-      <div class="hr"></div>
-      <div class="grid cols-2">
-        <button id="next" class="btn primary">Next • Select Traits</button>
-        <button id="clear" class="btn ghost">Clear</button>
-      </div>
-    </div>
-  </div>
+<!doctype html><html lang="en"><head>
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Nova • Categories</title>
+<link rel="stylesheet" href="assets/css/style.css"/>
+<script defer src="assets/js/state.js"></script>
+<script defer src="assets/js/data.js"></script>
+</head><body>
+<div class="container"><div class="header">
+<div class="brand">Nova</div>
+<div class="list"><a class="pill" href="index.html">Welcome</a><a class="pill" href="categories.html">Categories</a><a class="pill" href="traits.html">Traits</a><a class="pill" href="results.html">Results</a></div>
+<div class="badge">User: <span id="u"></span> • PIN: <span id="p"></span></div></div>
+<div class="card"><h1 class="h1">Choose categories that resonate with your life, your experiences, and the work that excites you.</h1>
+<p class="p">Pick 2–4 to start. You can always adjust later.</p>
+<div class="hr"></div><div id="cats" class="grid cols-4"></div><div class="hr"></div>
+<div class="grid cols-2"><button id="next" class="btn primary">Next • Select Traits</button><button id="clear" class="btn ghost">Clear</button></div>
+</div></div>
 <script>
-  qs('#u').textContent = NOVA.state.user||'guest';
-  qs('#p').textContent = NOVA.state.pin? '••••' : '—';
-  (async ()=>{
-    const data = await loadAllData();
-    let cats = data.categories||[];
-    if(!cats || cats.length===0){
-      cats = ["Technology","Healthcare","Education","Business","Creative","Public Service","Science","Trades","Hospitality","Finance"];
-    }
-    NOVA.state.categories = cats;
-    let selected = new Set(NOVA.state.selectedCategories||[]);
-    const root = qs('#cats');
-    root.innerHTML = '';
-    cats.forEach(c=>{
-      const el = document.createElement('button');
-      el.className = 'category-card btn ghost';
-      el.textContent = c;
-      if(selected.has(c)) el.classList.add('active');
-      el.addEventListener('click', ()=>{
-        if(selected.has(c)){ selected.delete(c); el.classList.remove('active'); }
-        else { selected.add(c); el.classList.add('active'); }
-      });
-      root.appendChild(el);
+qs('#u').textContent = NOVA.state.user||'guest';
+qs('#p').textContent = NOVA.state.pin? '••••' : '—';
+(async ()=>{
+  const data = await loadAllData();
+  let cats = data.categories||[];
+  if(!cats || cats.length===0){
+    cats = ["Technology","Healthcare","Education","Business","Creative","Public Service","Science","Trades","Hospitality","Finance"];
+  }
+  NOVA.state.categories = cats;
+  let selected = new Set(NOVA.state.selectedCategories||[]);
+  const root = qs('#cats'); root.innerHTML='';
+  cats.forEach(c=>{
+    const el = document.createElement('button');
+    el.className='category-card btn ghost'; el.textContent=c;
+    if(selected.has(c)) el.classList.add('active');
+    el.addEventListener('click',()=>{
+      if(selected.has(c)){ selected.delete(c); el.classList.remove('active'); }
+      else { selected.add(c); el.classList.add('active'); }
     });
-    qs('#next').onclick = ()=>{
-      NOVA.state.selectedCategories = Array.from(selected);
-      NOVA.save();
-      location.href='/traits.html';
-    };
-    qs('#clear').onclick = ()=>{ selected = new Set(); qsa('#cats .category-card').forEach(b=> b.classList.remove('active')); };
-  })();
+    root.appendChild(el);
+  });
+  qs('#next').onclick=()=>{ NOVA.state.selectedCategories = Array.from(selected); NOVA.save(); location.href='traits.html'; };
+  qs('#clear').onclick=()=>{ selected = new Set(); qsa('#cats .category-card').forEach(b=> b.classList.remove('active')); };
+})();
 </script>
-</body>
-</html>
+</body></html>
